--- a/style.css
+++ b/style.css
@@ -8,3 +8,117 @@
 tbody>tr.train>th {
     font-weight: 300 !important;
 }
+
+
+figure>img {
+    max-width: 100%;
+
+}
+
+figure {
+    width: 1200px;
+    position: relative;
+}
+
+#full_name {
+    position: absolute;
+    top: 41%;
+    left: 13.5%;
+}
+
+#full_name2 {
+    position: absolute;
+    top: 40.7%;
+    left: 70.5%;
+}
+
+#ticket_type {
+    position: absolute;
+    top: 40.7%;
+    left: 36.5%;
+}
+
+#ticket_dep {
+    position: absolute;
+    top: 51.5%;
+    left: 13.5%;
+}
+
+#ticket_arr {
+    position: absolute;
+    top: 61.5%;
+    left: 13.5%;
+}
+
+#ticket_date {
+    position: absolute;
+    top: 72.5%;
+    left: 13%;
+}
+
+#ticket_deptime {
+    position: absolute;
+    top: 72.5%;
+    left: 22.5%;
+}
+
+#ticket_arrtime {
+    position: absolute;
+    top: 72.5%;
+    left: 30%;
+}
+
+#ticket_pricing {
+    position: absolute;
+    top: 72.5%;
+    left: 38%;
+    color: white;
+}
+
+#ticket_dep2 {
+    position: absolute;
+    top: 51.5%;
+    left: 70.5%;
+}
+
+#ticket_arr2 {
+    position: absolute;
+    top: 61.5%;
+    left: 70.5%;
+}
+
+#ticket_number {
+    position: absolute;
+    top: 50.5%;
+    left: 37.5%;
+}
+
+#ticket_carriage {
+    position: absolute;
+    top: 56.5%;
+    left: 37.5%;
+}
+
+#ticket_seat {
+    position: absolute;
+    top: 63.5%;
+    left: 37.5%;
+}
+
+#ticket_number2 {
+    position: absolute;
+    top: 72.5%;
+    left: 70.5%;
+}
+
+#ticket_carriage2 {
+    position: absolute;
+    top: 72.5%;
+    left: 79.5%;
+}
+
+#ticket_seat2 {
+    position: absolute;
+    top: 72.5%;
+    left: 87.5%;
+}
